# http_server

./: Dockerfile  main.py  pyproject.toml  socket_server.py
data/: data.json
tamplates/: blog.jinja
