[tool.poetry]
name = "front-init"
version = "0.1.0"
description = ""
authors = ["Oleksandr Arshynov <oleksandrarshynov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
jinja2 = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
